ch20/tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: default
spec:
  selector:
   app: tomcat
  ports:
  - name: http
    targetPort: 8080
    port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: default
spec:
  replicas: 3
  selector:
   matchLabels:
     app: tomcat
  template:
   metadata:
     labels:
       app: tomcat
   spec:
     containers:
     - name: tomcat
       image: tomcat:8.5.20
       ports:
       - name: http
         containerPort: 8080
